[package]
name = "midgard_api_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
diesel = { version = "2.0", features = ["r2d2", "postgres"] }
tokio-postgres = { version = "0.7" }
actix-web = "4.0"
actix-rt = "2.5"
actix-cors = "0.6"
axum = "0.6"
chrono = "0.4"
chrono-tz = "0.6"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "tls-rustls"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2.12"
thiserror = "1.0.64"

